--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm run build:lib && npm run build:client",
-    "build:lib": "ng build drag-drop-layout --configuration production",
+    "build:lib": "ng build my-lib --configuration production",
     "build:client": "ng build client --configuration production",
     "watch": "ng build --watch --configuration development",
     "watch:lib": "ng build drag-drop-layout --watch --configuration development",
