--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install
         run: |
           npm install
-          npm run build:lib
+          npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
