--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "paths": {
-      "my-lib": [
-        "dist/my-lib"
+      "@skutam/my-lib": [
+        "./dist/my-lib"
       ]
     },
     "declaration": false,
